<resources>
    <string name="app_name">MyMovies</string>
    <string name="popular">Popular</string>
    <string name="search">Pesquisar</string>
    <string name="watch_later">Assistir mais tarde</string>
    <string name="there_was_an_error_retrieving_the_data">Ocorreu um erro ao recuperar os dados :(</string>
    <string name="try_again">Tentar Novamente</string>
    <string name="popular_movies">Outros Populares</string>
    <string name="first_movie_title">Titulo do primeiro filme</string>
    <string name="first_popular_movie_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula lobortis enim, ut laoreet magna scelerisque eget. Fusce eu ipsum orci. Integer eget dapibus nisl. Vivamus tristique libero sit amet orci fringilla, vitae lobortis enim interdum. Aenean dictum felis ac ipsum faucibus, lobortis tempus eros consequat. Donec ac ante in nisi dictum venenatis. Nullam id congue ante. Morbi in feugiat lectus. Proin pharetra lacinia tincidunt. Quisque sagittis fringilla odio at congue. Morbi vitae blandit velit. Suspendisse nulla nunc, maximus ac elit ultrices, bibendum laoreet metus.</string>
    <string name="movie_by_search_movie_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce molestie tempor ipsum. Vestibulum consequat odio at purus tempus, a gravida tortor egestas. Cras ante erat, posuere sit amet laoreet in, commodo vitae ante. Duis in felis eget orci rutrum dignissim placerat nec metus. Ut tempus tincidunt ornare. Nunc id neque nec quam tincidunt sodales. Sed fringilla mauris at magna egestas, quis egestas enim suscipit. Integer interdum nibh et erat egestas, ut finibus erat malesuada. Sed commodo fringilla faucibus.</string>
    <string name="something_didnt_go_right">Algo não ocorreu bem :(</string>
    <string name="an_error_has_occurred_please_try_again">Ocorreu um erro, toque para tentar novamente!</string>
    <string name="movie_details_title">Titulo do filme</string>
    <string name="movie_details_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id finibus nulla. Aenean nec placerat arcu, nec fermentum nibh. Maecenas euismod nunc sit amet pellentesque ultrices. Ut vel erat vitae libero lobortis pellentesque sit amet eu eros. Quisque sollicitudin quam tempus auctor pellentesque. Vivamus lacinia egestas lorem et consectetur. Maecenas varius ex in ipsum lacinia, sed dignissim leo facilisis. In egestas velit arcu, id venenatis orci feugiat vel. Fusce non vestibulum arcu. Sed auctor a dui ac aliquet.</string>
    <string name="movie_details_release_date">Data de lançamento</string>
    <string name="movie_by_search_release_date">Data de lançamento do filme a pesquisa</string>
    <string name="movie_details_vote_average">0.0</string>
    <string name="similar_movies">Similares</string>
    <string name="runtime">Tempo de duração</string>
    <string name="categories">Categorias</string>
    <string name="category_name">Nome Categoria</string>
    <string name="category_list">Lista de categorias</string>
    <string name="movies_by_search_movie_title">Titulo do filme da pesquisa</string>
    <string name="do_your_research_in_the_bar_above">Faça sua pesquisa na barra acima!</string>
    <string name="movie_by_search_movie_vote_average">Vote</string>
    <string name="remove_list">Remover da lista</string>
    <string name="actor_name">Nome do ator</string>
    <string name="cast">Elenco</string>
    <string name="first_indicator">#1</string>
    <string name="unknown">Desconhecido</string>
    <string name="details">Detalhes</string>
</resources>