<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_movie_backdrop"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <View
            android:id="@+id/view_backdrop_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/backdrop_movie_bg"
            app:layout_constraintBottom_toBottomOf="@id/image_view_movie_backdrop"
            app:layout_constraintEnd_toEndOf="@id/image_view_movie_backdrop"
            app:layout_constraintStart_toStartOf="@id/image_view_movie_backdrop"
            app:layout_constraintTop_toTopOf="@id/image_view_movie_backdrop" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="160dp"
            android:layout_height="230dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:cardElevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_movie_backdrop">

            <ImageView
                android:id="@+id/image_view_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_view_movie_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:maxEms="7"
            android:maxLines="3"
            android:text="@string/movie_details_title"
            android:textAlignment="center"
            android:textColor="@color/primary_purple"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_movie_details_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toTopOf="@+id/materialCardView" />

        <TextView
            android:id="@+id/text_view_movie_details_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/movie_details_release_date"
            android:textColor="@color/secondary_gray"
            app:layout_constraintBottom_toTopOf="@+id/text_view_movie_details_runtime"
            app:layout_constraintEnd_toEndOf="@+id/text_view_movie_details_title"
            app:layout_constraintStart_toStartOf="@+id/text_view_movie_details_title" />

        <TextView
            android:id="@+id/text_view_movie_details_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/runtime"
            android:textColor="@color/secondary_gray"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="@+id/text_view_movie_details_release_date"
            app:layout_constraintStart_toStartOf="@+id/text_view_movie_details_release_date" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialCardView">

            <TextView
                android:id="@+id/text_view_movie_details_add_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:drawableTop="@drawable/ic_baseline_add_24"
                android:fontFamily="@font/nunito_sans_bold"
                android:maxEms="4"
                android:text="@string/my_lists"
                android:textAlignment="center"
                android:textColor="@color/primary_purple"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
                app:layout_constraintStart_toEndOf="@+id/materialCardView" />

            <TextView
                android:id="@+id/text_view_movie_details_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_baseline_star_24"
                android:fontFamily="@font/nunito_sans_bold"
                android:gravity="center"
                android:text="@string/movie_details_vote_average"
                android:textColor="@color/primary_purple"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/text_view_movie_details_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/movie_details_description"
            android:textColor="@color/secondary_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <TextView
            android:id="@+id/text_view_movie_details_similar_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/similar_movies"
            android:textColor="@color/primary_purple"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_movie_details_description"
            app:layout_constraintTop_toBottomOf="@+id/text_view_movie_details_description" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_similar_movies_list"
            android:name="com.rodrigoads.mymovies.presenter.details.SimilarMoviesFragment"
            android:layout_width="0dp"
            android:layout_height="240dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_movie_details_similar_movies" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>